# signify-rs

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  appveyor.yml  bors.toml  release.toml
.github/workflows/: ci.yml  release-notes.py  release.yml
ci/: before_deploy.ps1  before_deploy.sh  script.sh
lib/: Cargo.toml
lib/src/: lib.rs
libsignify/: Cargo.toml
libsignify/examples/: basic.rs  message.txt  message.txt.sig  test_key.pub  test_key.sec
libsignify/src/: consts.rs  encoding.rs  errors.rs  key.rs  lib.rs  test_utils.rs
signify/: Cargo.toml
signify/src/: main.rs
signify/tests/: compare.sh  full-cycle.sh
src/: errors.rs  main.rs  structs.rs
tests/: compare.sh  full-cycle.sh  integration.sh
