[package]
name = "signify"
version = "0.4.2"
authors = ["Jan-Erik Rediger <janerik@fnordig.de>"]
edition = "2018"

keywords = [ "cryptography", "security" ]
description = "Create cryptographic signatures for files and verify them"

readme = "README.md"
license = "MIT"

homepage = "https://github.com/badboy/signify-rs"
repository = "https://github.com/badboy/signify-rs"

include = [
  "/Cargo.toml",
  "/README*",
  "/LICENSE*",
  "/src/**/*",
  "/tests/compare.sh",
  "/tests/full-cycle.sh",
  "/tests/integration.sh",
  "/examples/**/*",
]

[dependencies]
byteorder = "1.4"
rust-crypto = "0.2.36"
base64 = "0.13.0"
docopt = "1.1.1"
rpassword = "5.0.1"
ring = "0.16.20"
serde = "1.0"
serde_derive = "1.0"
anyhow = "1.0"
