[package]
name = "signify"
version = "0.4.1"
authors = ["Jan-Erik Rediger <janerik@fnordig.de>"]
edition = "2021"

keywords = [ "cryptography", "security" ]
description = "Create cryptographic signatures for files and verify them"

readme = "README.md"
license = "MIT"

homepage = "https://github.com/badboy/signify-rs"
repository = "https://github.com/badboy/signify-rs"

include = [
  "/Cargo.toml",
  "/README*",
  "/LICENSE*",
  "/src/**/*",
  "/tests/compare.sh",
  "/tests/full-cycle.sh",
  "/tests/integration.sh",
  "/examples/**/*",
]

[dependencies]
byteorder = "1.2"
rust-crypto = "0.2"
base64 = "0.13"
docopt = "1"
rpassword = "5"
ring = { version = "0.16", features = ["std"] }
untrusted = "0.7"
failure = "0.1"
serde = { version = "1.0", features = ["derive"] }
