[package]
name = "signify"
version = "0.4.1"
authors = ["Jan-Erik Rediger <janerik@fnordig.de>"]
edition = "2021"

keywords = [ "cryptography", "security" ]
description = "Create cryptographic signatures for files and verify them"

readme = "README.md"
license = "MIT"

homepage = "https://github.com/badboy/signify-rs"
repository = "https://github.com/badboy/signify-rs"

include = [
  "/Cargo.toml",
  "/README*",
  "/LICENSE*",
  "/src/**/*",
  "/tests/compare.sh",
  "/tests/full-cycle.sh",
  "/tests/integration.sh",
  "/examples/**/*",
]

[dependencies]
byteorder = "1.2"
bcrypt-pbkdf = "0.7"
base64 = "0.13"
clap = { version = "3.0.0-beta.5", default-features = false, features = ["cargo", "derive", "std"] }
rpassword = "5"
ed25519-dalek = { version = "1", default-features = false, features = ["alloc", "u64_backend"] }
rand_core = { version = "0.5", features = ["getrandom"] }
