[package]
name = "signify_lib"
version = "0.5.0"
authors = ["Jan-Erik Rediger <janerik@fnordig.de>"]
edition = "2018"

keywords = [ "cryptography", "security" ]
description = "Create cryptographic signatures for files and verify them"

readme = "README.md"
license = "MIT"

homepage = "https://github.com/badboy/signify-rs"
repository = "https://github.com/badboy/signify-rs"

[dependencies]
byteorder = "^1.2"
base64 = "^0.12.3"
ed25519-dalek = "1.0"
rand = { version = "0.7.2" }
rand_core = "*"
sha2 = "0.9.1"
anyhow = "^1.0.32"
bcrypt-pbkdf = "^0.3.0"
