[package]
name = "libsignify"
version = "0.5.3"
authors = ["Jan-Erik Rediger <janerik@fnordig.de>", "BlackHoleFox <blackholefoxdev@gmail.com>"]
edition = "2021"

keywords = ["cryptography", "security"]
description = "Create cryptographic signatures for files and verify them"

readme = "../README.md"
license = "MIT"

homepage = "https://github.com/badboy/signify-rs"
repository = "https://github.com/badboy/signify-rs"

[features]
std = []

[dependencies]
bcrypt-pbkdf = { version = "0.10", default-features = false }
base64ct = { version = "1.6", default-features = false, features = ["alloc"] }
ed25519-dalek = { version = "2", default-features = false, features = ["alloc", "fast", "rand_core"] }
rand_core = { version = "0.6", default-features = false }
sha2 = { version = "0.10", default-features = false }
zeroize = { version = "1.4", default-features = false, features = ["alloc"] }

[dev-dependencies]
static_assertions = "1"
