[package]
name = "signify"
version = "0.5.3"
authors = ["Jan-Erik Rediger <janerik@fnordig.de>", "BlackHoleFox <blackholefoxdev@gmail.com>"]
edition = "2021"

keywords = ["cryptography", "security"]
description = "Command-line implementation of the signify signature scheme"

readme = "../README.md"
license = "MIT"

homepage = "https://github.com/badboy/signify-rs"
repository = "https://github.com/badboy/signify-rs"

[[bin]]
name = "signify"
doc = false

[dependencies]
clap = { version = "4.4.0", default-features = false, features = ["cargo", "derive", "std"] }
rand_core = { version = "0.6", features = ["getrandom"] }
rpassword = { version = "7", default-features = false }
libsignify = { path = "../libsignify", version = "0.5.0", features = ["std"] }
